--- a/themes/FleetManagement/subscription.twig
+++ b/themes/FleetManagement/subscription.twig
@@ -2,7 +2,7 @@
   <section class="pricing" id="pricing">
     <div class="container-fluid" data-aos="fade-up">
       <div class="section-title">
-        <h2>Pricing</h2>
+        <h2>Subscription</h2>
 
         <p>
           Manage every aspect of your fleet in efficient way<br />
@@ -25,7 +25,8 @@
 
             <ul class="plist">
               <li><i class="bx bx-check"></i> view reports</li>
-              <li><i class="bx bx-check"></i>Management of
+              <li>
+                <i class="bx bx-check"></i>Management of
                 <ul class="clist">
                   <li>Vehicle Details</li>
                   <li>Employee Details</li>
@@ -34,7 +35,7 @@
                 </ul>
               </li>
             </ul>
-            <a class="buy-btn" id='btn-bronze' name='btn-bronze' href="register/company">Get Started</a>
+            <!-- <a class="buy-btn" id='' name='' href="register/company">Get Started With Register</a> -->
 
             <p>
               Free subscription for<br />
@@ -54,9 +55,12 @@
             <h4><sup>PKG</sup>100<span>per month</span></h4>
 
             <ul class="plist">
-              <li><i class="bx bx-check"></i>View Download and print reports</li>
+              <li>
+                <i class="bx bx-check"></i>View Download and print reports
+              </li>
               <li><i class="bx bx-check"></i>Bronze services</li>
-              <li><i class="bx bx-check"></i>Management of
+              <li>
+                <i class="bx bx-check"></i>Management of
                 <ul class="clist">
                   <li>Branches and Departments</li>
                   <li>Vehicle Maintenance</li>
@@ -64,7 +68,7 @@
                 </ul>
               </li>
             </ul>
-            <a class="buy-btn" id='btn-silver' name='btn-silver' href="register/company">Get Started</a>
+            <!-- <a class="buy-btn" id='btn-silver' name='btn-silver' href="register/company">Get Started</a> -->
 
             <p>Minimum 3 months subscription</p>
           </div>
@@ -81,15 +85,18 @@
             <h4><sup>PKG</sup>300<span>per month</span></h4>
 
             <ul class="plist">
-              <li><i class="bx bx-check"></i>View Download and print reports</li>
+              <li>
+                <i class="bx bx-check"></i>View Download and print reports
+              </li>
               <li><i class="bx bx-check"></i>Silver services</li>
-              <li><i class="bx bx-check"></i>Management of
+              <li>
+                <i class="bx bx-check"></i>Management of
                 <ul class="clist">
                   <li>Accident Monitoring</li>
                 </ul>
               </li>
             </ul>
-            <a class="buy-btn" id='btn-gold' name='btn-gold' href="register/company">Get Started</a>
+            <!-- <a class="buy-btn" id='btn-gold' name='btn-gold' href="register/company">Get Started</a> -->
 
             <p>Minimum 6 months subscription</p>
           </div>
@@ -106,20 +113,28 @@
             <h4><sup>PKG</sup>500<span>per month</span></h4>
 
             <ul class="plist">
-              <li><i class="bx bx-check"></i>View Download and print reports</li>
+              <li>
+                <i class="bx bx-check"></i>View Download and print reports
+              </li>
               <li><i class="bx bx-check"></i>Gold services</li>
-              <li><i class="bx bx-check"></i>Management Of
+              <li>
+                <i class="bx bx-check"></i>Management Of
                 <ul class="clist">
                   <li>Trip Logging</li>
                 </ul>
               </li>
             </ul>
-            <a class="buy-btn" id='btn-platinum' name='btn-platinum' href="register/company">Get Started</a>
+            <!-- <a class="buy-btn" id='btn-platinum' name='btn-platinum' href="register/company">Get Started</a> -->
 
             <p>Minimum 12 months subscription</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="text-center">
+      <a class="buy-btn" id="" name="" href="register/company"
+        >Get Started With Register</a
+      >
     </div>
   </section>
 </main>
