--- a/themes/FleetManagement/templates/layout/page--user--register--company.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--register--company.html.twig
@@ -199,7 +199,7 @@ File Include
       console.log(result);
       if (result.isConfirmed) {
         // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/subscription';
+        window.location.href = '{{ base_url }}/renew';
       }
       if(result.isDismissed){
         // window.location.href = "https://www.google.com/";
