--- a/themes/FleetManagement/templates/page--node--109.html.twig
+++ b/themes/FleetManagement/templates/page--node--109.html.twig
@@ -13,7 +13,147 @@
 </header>
 {% endif %} {% if page.content %}
 <div class="container" style="margin-top:8%">
-  {{ page.content }}
+  <main id="main">
+    <section class="pricing" id="pricing">
+      <div class="container-fluid" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Subscription</h2>
+  
+          <p>
+            Manage every aspect of your fleet in efficient way<br />
+            Tens of thousands of businesses save time and money by using
+            DIGIFLEET<br />
+            fast, simple, and affordable online software.
+          </p>
+        </div>
+  
+        <div class="row">
+          <div
+            class="col-lg-3 package_card"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
+            <div class="box">
+              <h3>BRONZE</h3>
+  
+              <h4><sup>PKG</sup>0<span>per month</span></h4>
+  
+              <ul class="plist">
+                <li><i class="bx bx-check"></i> view reports</li>
+                <li>
+                  <i class="bx bx-check"></i>Management of
+                  <ul class="clist">
+                    <li>Vehicle Details</li>
+                    <li>Employee Details</li>
+                    <li>Vehicle Allotment Details</li>
+                    <li>Fuel Filling Details</li>
+                  </ul>
+                </li>
+              </ul>
+              <!-- <a class="buy-btn" id='' name='' href="register/company">Get Started With Register</a> -->
+  
+              <p>
+                Free subscription for<br />
+                2 vehicles only
+              </p>
+            </div>
+          </div>
+  
+          <div
+            class="col-lg-3 package_card mt-4 mt-lg-0"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="box featured">
+              <h3>SILVER</h3>
+  
+              <h4><sup>PKG</sup>100<span>per month</span></h4>
+  
+              <ul class="plist">
+                <li>
+                  <i class="bx bx-check"></i>View Download and print reports
+                </li>
+                <li><i class="bx bx-check"></i>Bronze services</li>
+                <li>
+                  <i class="bx bx-check"></i>Management of
+                  <ul class="clist">
+                    <li>Branches and Departments</li>
+                    <li>Vehicle Maintenance</li>
+                    <li>Users and Security</li>
+                  </ul>
+                </li>
+              </ul>
+              <!-- <a class="buy-btn" id='btn-silver' name='btn-silver' href="register/company">Get Started</a> -->
+  
+              <p>Minimum 3 months subscription</p>
+            </div>
+          </div>
+  
+          <div
+            class="col-lg-3 package_card mt-4 mt-lg-0"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
+            <div class="box">
+              <h3>GOLD</h3>
+  
+              <h4><sup>PKG</sup>300<span>per month</span></h4>
+  
+              <ul class="plist">
+                <li>
+                  <i class="bx bx-check"></i>View Download and print reports
+                </li>
+                <li><i class="bx bx-check"></i>Silver services</li>
+                <li>
+                  <i class="bx bx-check"></i>Management of
+                  <ul class="clist">
+                    <li>Accident Monitoring</li>
+                  </ul>
+                </li>
+              </ul>
+              <!-- <a class="buy-btn" id='btn-gold' name='btn-gold' href="register/company">Get Started</a> -->
+  
+              <p>Minimum 6 months subscription</p>
+            </div>
+          </div>
+  
+          <div
+            class="col-lg-3 package_card mt-4 mt-lg-0"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="box featured">
+              <h3>PLATINUM</h3>
+  
+              <h4><sup>PKG</sup>500<span>per month</span></h4>
+  
+              <ul class="plist">
+                <li>
+                  <i class="bx bx-check"></i>View Download and print reports
+                </li>
+                <li><i class="bx bx-check"></i>Gold services</li>
+                <li>
+                  <i class="bx bx-check"></i>Management Of
+                  <ul class="clist">
+                    <li>Trip Logging</li>
+                  </ul>
+                </li>
+              </ul>
+              <!-- <a class="buy-btn" id='btn-platinum' name='btn-platinum' href="register/company">Get Started</a> -->
+  
+              <p>Minimum 12 months subscription</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center featured mt-5">
+        <a class="buy-btn" id="" name="" href="register/company"
+          >Register For Get Started </a
+        >
+      </div>
+    </section>
+  </main>
+  
 </div>
 {% endif %}
 
