--- a/themes/FleetManagement/assets/front/css/backdesign.css
+++ b/themes/FleetManagement/assets/front/css/backdesign.css
@@ -17,11 +17,9 @@
 #edit-field-fuel-efficiency-wrapper {
   display: none;
 }
-#edit-field-companybranch-wrapper
-{
+#edit-field-companybranch-wrapper {
   display: none;
 }
-
 #edit-preview {
   display: none;
 }
@@ -479,28 +477,30 @@ a.menu_lvl_0_link.is-active {
   background-color: rgba(55, 81, 126, 0.8);
   border-color: rgba(55, 81, 126, 0.8);
 }
-#edit-delete,#edit-cancel {
+#edit-delete {
   color: white;
   cursor: pointer;
-  width: auto;
+  width: 7%;
   background-color: #37517e;
   border-color: #37517e;
-  border-radius: 5px;
+  border-radius: 0;
   margin-bottom: 5px;
   display: block;
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  height: 50% !important;
+  height: 48px;
 }
 
 /* .filter form label{
   display:block;
 } */
 .filter form label,
-.filter form input,
+.filter form input[type=text],
+.filter form input[type=number],
+.filter form input[type=email],
 .filter form select {
-  width: 250px;
+  width: 250px !important;
   float: left;
   height: 40px;
   margin: 0;
@@ -514,12 +514,12 @@ a.menu_lvl_0_link.is-active {
   margin-left: 20px;
 }
 
-.break{
+.break {
   flex-basis: 100%;
   height: 0;
 }
 
-.rounded-5{
+.rounded-5 {
   border-radius: 5px;
 }
 
@@ -567,23 +567,23 @@ a.menu_lvl_0_link.is-active {
   cursor: default;
 }
 
-.divider{
+.divider {
   height: 1px;
   margin: 9px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
 
-.bg-lightgrey{
+.bg-lightgrey {
   background-color: lightgrey;
 }
 
-.nav-icon span{
+.nav-icon span {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
 }
 
-.nav-icon::before{
+.nav-icon::before {
   /* font-family: "themify"; */
   padding-right: 10px;
   font-size: 18px;
@@ -617,35 +617,35 @@ a.menu_lvl_0_link.is-active {
   font-size: 10px;
 } */
 
-#sidebar.active ul li a.nav-icon span{
+#sidebar.active ul li a.nav-icon span {
   display: none !important;
-} 
-#sidebar.active ul li a.nav-icon::before{
+}
+#sidebar.active ul li a.nav-icon::before {
   padding: 15px;
   font-size: 25px;
-} 
+}
 /* #sidebar.active ul li span.cexpand.open,#sidebar.active ul li ul.collapse.in{
   display: none !important;
 } */
-#sidebar.active ul li span.cexpand{
+#sidebar.active ul li span.cexpand {
   /* display: none !important; */
   margin-top: -35px;
   width: 100%;
-} 
+}
 
-#sidebar.active ul.collapse.in li a span{
+#sidebar.active ul.collapse.in li a span {
   font-size: 15px;
 }
-#sidebar.active ul.collapse.in li a{
+#sidebar.active ul.collapse.in li a {
   border-radius: 0 5px 5px 0;
 }
-#sidebar.active ul.collapse.in{
+#sidebar.active ul.collapse.in {
   left: 80px;
   position: absolute;
   margin-top: -45px;
   width: 210px;
   z-index: 4000;
-  background: #3E5367;
+  background: #3e5367;
   /* display: block; */
   font-size: 10px;
 }
@@ -668,3 +668,53 @@ a.menu_lvl_0_link.is-active {
   width: 18.5%;
   z-index:9999;
 } */
+
+.disabled {
+  cursor: not-allowed;
+}
+
+.disabled a,
+.disabled span {
+  pointer-events: none;
+}
+
+.nav-item.active{
+  cursor: default;
+}
+.nav-item.active a{
+  pointer-events: all;
+}
+
+.import-btn
+{
+  vertical-align: middle;
+  padding: 10px;
+  position: absolute;
+  top: 44%;
+  right: 8%;
+}
+.description{
+  margin-bottom: 10px;
+}
+
+.download_temp
+{
+  position: absolute;
+  top: 44%;
+  right: 4%;
+  /* height: auto; */
+}
+
+input[type=text],
+input[type=email],
+input[type=password],
+input[type=file],
+input[type=date],
+input[type=time],
+input[type=number],
+select,
+textarea{
+  width: 53% !important;
+  border-radius: 5px !important;
+  border-color: #6d6d6d !important;
+}
