--- a/themes/FleetManagement/templates/form/form-element.html.twig
+++ b/themes/FleetManagement/templates/form/form-element.html.twig
@@ -60,7 +60,7 @@
 %}
 {%
   set description_classes = [
-    'description',
+    'description pd-left-10',
     description_display == 'invisible' ? 'visually-hidden',
   ]
 %}
@@ -91,8 +91,8 @@
     </div>
   {% endif %}
   {% if description_display in ['after', 'invisible'] and description.content %}
-   {# <div{{ description.attributes.addClass(description_classes) }}>
+   <div{{ description.attributes.addClass(description_classes) }}>
       {{ description.content }}
-    </div> #}
+    </div>
   {% endif %}
 </div>
