--- a/themes/FleetManagement/templates/layout/page--node--%.html.twig
+++ b/themes/FleetManagement/templates/layout/page--node--%.html.twig
@@ -9,7 +9,8 @@
 <script src="/AWFleetManagement/themes/FleetManagement/assets/back/charts/js/raphael-min.js"></script>
 <script src="/AWFleetManagement/themes/FleetManagement/assets/back/charts/js/morris.min.js"></script>
 <link rel="stylesheet" href="/AWFleetManagement/themes/FleetManagement/assets/back/charts/css/morris.css">
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="{{url('<front>')}}themes/FleetManagement/assets/back/css/sweetalert2.min.css"></script>
+<script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
 <div class="wrapper">
     <!-- Sidebar -->
     <nav id="sidebar" class="lorvens-bg">
@@ -131,13 +132,13 @@
   // console.log(package);
   if (package == "expired") {
     Swal.fire({
-      title: 'Package Expired!',
-      text: "Please Renew Your Package!",
-      icon: 'error',
+      title: 'Subscribe Package!',
+      text: "Please Choose Your Package!",
+      icon: 'info',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Renew!',
+      confirmButtonText: 'Subscribe!',
       cancelButtonText: 'Logout',
       allowOutsideClick: false,
       allowEscapeKey: false,
@@ -154,7 +155,7 @@
       console.log(result);
       if (result.isConfirmed) {
         // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/subscription';
+        window.location.href = '{{ base_url }}/renew';
       }
       if(result.isDismissed){
         // window.location.href = "https://www.google.com/";
@@ -163,5 +164,6 @@
     })
   }
 </script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/custom.js"></script>
+<script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
+<script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/custom.js"></script>
+<script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/bootstrap.min.js"></script>
