--- a/themes/FleetManagement/templates/layout/page--user--%.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--%.html.twig
@@ -9,6 +9,8 @@
 <script src="/AWFleetManagement/themes/FleetManagement/assets/back/charts/js/raphael-min.js"></script>
 <script src="/AWFleetManagement/themes/FleetManagement/assets/back/charts/js/morris.min.js"></script>
 <link rel="stylesheet" href="/AWFleetManagement/themes/FleetManagement/assets/back/charts/css/morris.css">
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/css/sweetalert2.min.css"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <div class="wrapper">
     <!-- Sidebar -->
@@ -113,7 +115,15 @@
       </ol>
       <!-- /Breadcrumb -->
       <!-- Main Content -->
+      <input
+      id="package"
+      name="package"
+      type="hidden"
+      value="{{ expiry_status }}"
+    />
+    {% if expiry_status != 'expired' %}
       {{ page.content }}
+    {% endif %}
       <!-- /Main Content -->
     </div>
     <!-- /Page Content -->
@@ -131,13 +141,13 @@
   // console.log(package);
   if (package == "expired") {
     Swal.fire({
-      title: 'Package Expired!',
-      text: "Please Renew Your Package!",
-      icon: 'error',
+      title: 'Subscribe Package!',
+      text: "Please Choose Your Package!",
+      icon: 'info',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Renew!',
+      confirmButtonText: 'Subscribe!',
       cancelButtonText: 'Logout',
       allowOutsideClick: false,
       allowEscapeKey: false,
@@ -154,7 +164,7 @@
       console.log(result);
       if (result.isConfirmed) {
         // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/subscription';
+        window.location.href = '{{ base_url }}/renew';
       }
       if(result.isDismissed){
         // window.location.href = "https://www.google.com/";
