--- a/themes/FleetManagement/templates/page--node--203.html.twig
+++ b/themes/FleetManagement/templates/page--node--203.html.twig
@@ -136,13 +136,13 @@
   // console.log(package);
   if (package == "expired") {
     Swal.fire({
-      title: 'Package Expired!',
-      text: "Please Renew Your Package!",
-      icon: 'error',
+      title: 'Subscribe Package!',
+      text: "Please Choose Your Package!",
+      icon: 'info',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Renew!',
+      confirmButtonText: 'Subscribe!',
       cancelButtonText: 'Logout',
       allowOutsideClick: false,
       allowEscapeKey: false,
@@ -159,7 +159,7 @@
       console.log(result);
       if (result.isConfirmed) {
         // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/subscription';
+        window.location.href = '{{ base_url }}/renew';
       }
       if(result.isDismissed){
         // window.location.href = "https://www.google.com/";
