--- a/themes/FleetManagement/templates/page--node--206.html.twig
+++ b/themes/FleetManagement/templates/page--node--206.html.twig
@@ -64,7 +64,7 @@
               <h5>Notifications</h5>
               <div class="notification-menu">
               {% if notifications | json_decode %}
-              {% for i in 0..3 %}
+              {% for i in 0..4 %}
                 {% set notification = notifications | json_decode %}
                 {% if notification[i][0].type %}
                 <p class="dropdown-header font-weight-bold text-left bg-lightgrey">{{ notification[i][0].type }}</p>
@@ -184,13 +184,13 @@
   // console.log(package);
   if (package == "expired") {
     Swal.fire({
-      title: 'Package Expired!',
-      text: "Please Renew Your Package!",
-      icon: 'error',
+      title: 'Subscribe Package!',
+      text: "Please Choose Your Package!",
+      icon: 'info',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Renew!',
+      confirmButtonText: 'Subscribe!',
       cancelButtonText: 'Logout',
       allowOutsideClick: false,
       allowEscapeKey: false,
@@ -207,7 +207,7 @@
       console.log(result);
       if (result.isConfirmed) {
         // window.location.href = "https://www.google.com/";
-        window.location.href = '{{ base_url }}/subscription';
+        window.location.href = '{{ base_url }}/renew';
       }
       if(result.isDismissed){
         // window.location.href = "https://www.google.com/";
