--- a/themes/FleetManagement/templates/form/webform.html.twig
+++ b/themes/FleetManagement/templates/form/webform.html.twig
@@ -2,7 +2,7 @@
 <section id="contact" class="contact">
   <div class="container" data-aos="fade-up">
     <div class="section-title">
-      <h2>Contact</h2>
+      <h2>Contact Us</h2>
       <p>
         Managing your fleet at tip of your fingers.<br>
         We are on a quest for making marketing tools smarter, more powerful and more elegant.
