--- a/themes/FleetManagement/templates/layout/page--user--login.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--login.html.twig
@@ -47,8 +47,7 @@
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Our Social Networks</h4>
           <p>
-            Cras fermentum odio eu feugiat lide par naso tierra videa magna
-            derita valies
+            Follow us on!!
           </p>
           <div class="social-links mt-3">
             <a href="{{ facebook_url }}" class="facebook"
