--- a/themes/FleetManagement/templates/layout/page--user--register--company.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--register--company.html.twig
@@ -47,8 +47,7 @@
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Our Social Networks</h4>
           <p>
-            Cras fermentum odio eu feugiat lide par naso tierra videa magna
-            derita valies
+            Follow us on!!
           </p>
           <div class="social-links mt-3">
             <a href="{{ facebook_url }}" class="facebook"
@@ -93,13 +92,13 @@
   <nav id="sidebar" class="lorvens-bg">
     <div class="sidebar-header">
       {% if role == 'company' %} {% set home_url = base_url ~
-      '/company/dashboard' %} {% elseif role == 'operator' %} {% set home_url =
+      '/company/dashboard' %} {% elseif role == 'data_entry' %} {% set home_url =
       base_url ~ '/operator/dashboard' %} {% elseif role == 'administrator' %}
       {% set home_url = base_url ~ '/admin/dashboard' %} {% endif %}
       <a href="{{ home_url }}"><h5 class="logo" alt="logo">DIGIFLEET</h5></a>
       <a href="{{ home_url }}"><h5 class="minimal-logo text-align" alt="logo"><strong>DF</strong></h5></a>
     </div>
-    {% if expiry_status != 'expired' %}
+    {% if expiry_status not in ['expired', 'new-user'] %}
     <ul class="list-unstyled components">
       {{
         page.header
@@ -182,7 +181,41 @@ File Include
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Renew!',
+      confirmButtonText: 'Subscribe!',
+      cancelButtonText: 'Logout',
+      allowOutsideClick: false,
+      allowEscapeKey: false,
+      allowEnterKey:false,
+      showClass: {
+        popup: 'swal2-noanimation',
+        backdrop: 'swal2-noanimation'
+      },
+      hideClass: {
+        popup: '',
+        backdrop: ''
+      }
+    }).then((result) => {
+      console.log(result);
+      if (result.isConfirmed) {
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/renew';
+      }
+      if(result.isDismissed){
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/user/logout';
+      }
+    })
+  }
+
+  if (package == "new-user") {
+    Swal.fire({
+      title: 'Subscribe Package!',
+      text: "Please Choose Your Package!",
+      icon: 'info',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Subscribe!',
       cancelButtonText: 'Logout',
       allowOutsideClick: false,
       allowEscapeKey: false,
