--- a/themes/FleetManagement/templates/page--node--204.html.twig
+++ b/themes/FleetManagement/templates/page--node--204.html.twig
@@ -34,7 +34,7 @@
       <a href="{{ home_url }}"><h5 class="logo" alt="logo">DIGIFLEET</h5></a>
       <a href="{{ home_url }}"><h5 class="minimal-logo text-align" alt="logo"><strong>DF</strong></h5></a>
     </div>
-    {% if expiry_status != 'expired' %}
+    {% if expiry_status not in ['expired', 'new-user'] %}
     <ul class="list-unstyled components">
       {{
         page.header
@@ -54,10 +54,22 @@
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+              {% if notifications | json_decode %}
+              <span class="ti-announcement"><span class="notification-badges"></span></span>
+              {% else %}
               <span class="ti-announcement"></span>
+              {% endif %}
             </a>
             <div class="dropdown-menu lorvens-box-shadow notifications animated flipInY">
-              <h5><strong> Notifications </strong></h5>
+              <div class="notification-heading row m-0">                
+                <div class="text-left col-6">
+                  <h5>Notifications</h5>
+                </div>
+                <div class="text-right col-6">
+                  <a href="{{ base_url }}/notifications" class="dropdown-header text-primary font-weight-bold text-right m-auto">View More</a>
+                  {# <a href="{{ base_url }}/notifications" class="btn btn-primary h-50 rounded-5">View More</a> #}
+                </div>
+              </div>
               <div class="notification-menu">
               {% if notifications | json_decode %}
               {% for i in 0..4 %}
@@ -72,8 +84,9 @@
                   {% endif %}
                 {% endfor %}
               {% endfor %}
+              {#
                 <hr class="m-0">
-                <a href="{{ base_url }}/notifications" class="dropdown-header text-center text-primary font-weight-bold text-left m-auto">View More</a>
+                   <a href="{{ base_url }}/notifications" class="dropdown-header text-center text-primary font-weight-bold text-left m-auto">View More</a> #}
               {% else %}
                 <a class="dropdown-item" href="#">
                   <span class="ti-info"></span> No Notification Yet!</a>
@@ -96,10 +109,10 @@
               class="dropdown-menu lorvens-box-shadow profile animated flipInY"
             >
               <h5>{{ username }}</h5>
-              <a class="dropdown-item" href="#">
+              <!-- <a class="dropdown-item" href="#">
                 <span class="ti-settings"></span> Settings</a
-              >
-              <a class="dropdown-item" href="#">
+              > -->
+              <a class="dropdown-item" href="{{ base_url }}/help">
                 <span class="ti-help-alt"></span> Help</a
               >
               <a class="dropdown-item" href="{{ base_url }}/user/logout">
@@ -128,7 +141,7 @@
       type="hidden"
       value="{{ expiry_status }}"
     />
-    {% if expiry_status != 'expired' %}
+    {% if expiry_status not in ['expired', 'new-user'] %}
     
     <div class="">
       <div class="widget-area-2">
@@ -179,6 +192,40 @@
   var package = document.getElementById("package").value;
   // console.log(package);
   if (package == "expired") {
+    Swal.fire({
+      title: 'Package Expired!',
+      text: "Please Renew Your Package!",
+      icon: 'error',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Subscribe!',
+      cancelButtonText: 'Logout',
+      allowOutsideClick: false,
+      allowEscapeKey: false,
+      allowEnterKey:false,
+      showClass: {
+        popup: 'swal2-noanimation',
+        backdrop: 'swal2-noanimation'
+      },
+      hideClass: {
+        popup: '',
+        backdrop: ''
+      }
+    }).then((result) => {
+      console.log(result);
+      if (result.isConfirmed) {
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/renew';
+      }
+      if(result.isDismissed){
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/user/logout';
+      }
+    })
+  }
+
+  if (package == "new-user") {
     Swal.fire({
       title: 'Subscribe Package!',
       text: "Please Choose Your Package!",
