--- a/themes/FleetManagement/templates/page--node--246.html.twig
+++ b/themes/FleetManagement/templates/page--node--246.html.twig
@@ -28,7 +28,7 @@
   <nav id="sidebar" class="lorvens-bg disabled">
     <div class="sidebar-header">
       {% if role == 'company' %} {% set home_url = base_url ~
-      '/company/dashboard' %} {% elseif role == 'operator' %} {% set home_url =
+      '/company/dashboard' %} {% elseif role == 'data_entry' %} {% set home_url =
       base_url ~ '/operator/dashboard' %} {% elseif role == 'administrator' %}
       {% set home_url = base_url ~ '/admin/dashboard' %} {% endif %}
       <a href="{{ home_url }}"><h5 class="logo" alt="logo">DIGIFLEET</h5></a>
@@ -36,7 +36,7 @@
         ><h5 class="minimal-logo" alt="logo"><strong>DF</strong></h5></a
       >
     </div>
-    {% if expiry_status != 'expired' %}
+    {% if expiry_status not in ['expired', 'new-user'] %}
     <ul class="list-unstyled components">
       {{
         page.header
@@ -55,56 +55,48 @@
         </div>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a
-              class="nav-link dropdown-toggle"
-              data-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
               {% if notifications | json_decode %}
-              <span class="ti-announcement"
-                ><span class="notification-badges"></span
-              ></span>
+              <span class="ti-announcement"><span class="notification-badges"></span></span>
               {% else %}
               <span class="ti-announcement"></span>
               {% endif %}
             </a>
-            <div
-              class="dropdown-menu lorvens-box-shadow notifications animated flipInY"
-            >
-              <h5>Notifications</h5>
-              <div class="notification-menu">
-                {% if notifications | json_decode %} {% for i in 0..3 %} {% set
-                notification = notifications | json_decode %} {% if
-                notification[i][0].type %}
-                <p
-                  class="dropdown-header font-weight-bold text-left bg-lightgrey"
-                >
-                  {{ notification[i][0].type }}
-                </p>
-                {% endif %} {% for j in 0..2 %} {% if notification[i][j] %}
-                <a class="dropdown-item" href="#">
-                  <span class="{{ notification[i][j].icon }}"></span>
-                  {{ notification[i][j].title }}</a
-                >
-                {% endif %} {% endfor %} {% endfor %}
-                <hr class="m-0" />
-                <a
-                  href="{{ base_url }}/notifications"
-                  class="dropdown-header text-center text-primary font-weight-bold text-left m-auto"
-                  >View More</a
-                >
-                {% else %}
-                <a class="dropdown-item" href="#">
-                  <span class="ti-info"></span> No Notification Yet!</a
-                >
-                {% endif %}
+            <div class="dropdown-menu lorvens-box-shadow notifications animated flipInY">
+              <div class="notification-heading row m-0">                
+                <div class="text-left col-6">
+                  <h5>Notifications</h5>
+                </div>
+                <div class="text-right col-6">
+                  <a href="{{ base_url }}/notifications" class="dropdown-header text-primary font-weight-bold text-right m-auto">View More</a>
+                  {# <a href="{{ base_url }}/notifications" class="btn btn-primary h-50 rounded-5">View More</a> #}
+                </div>
               </div>
+              <div class="notification-menu">
+              {% if notifications | json_decode %}
+              {% for i in 0..4 %}
+                {% set notification = notifications | json_decode %}
+                {% if notification[i][0].type %}
+                <p class="dropdown-header font-weight-bold text-left bg-lightgrey">{{ notification[i][0].type }}</p>
+                {% endif %}
+                {% for j in 0..2 %}
+                  {% if notification[i][j] %}
+                    <a class="dropdown-item" href="#">
+                      <span class="{{ notification[i][j].icon }}"></span> {{ notification[i][j].title }}</a>
+                  {% endif %}
+                {% endfor %}
+              {% endfor %}
+              {#
+                <hr class="m-0">
+                   <a href="{{ base_url }}/notifications" class="dropdown-header text-center text-primary font-weight-bold text-left m-auto">View More</a> #}
+              {% else %}
+                <a class="dropdown-item" href="#">
+                  <span class="ti-info"></span> No Notification Yet!</a>
+              {% endif %}
+                </div>
             </div>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
@@ -328,36 +320,70 @@
   // console.log(package);
   if (package == "expired") {
     Swal.fire({
-      title: "Package Expired!",
+      title: 'Package Expired!',
       text: "Please Renew Your Package!",
-      icon: "error",
+      icon: 'error',
       showCancelButton: true,
-      confirmButtonColor: "#3085d6",
-      cancelButtonColor: "#d33",
-      confirmButtonText: "Renew!",
-      cancelButtonText: "Logout",
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Subscribe!',
+      cancelButtonText: 'Logout',
       allowOutsideClick: false,
       allowEscapeKey: false,
-      allowEnterKey: false,
+      allowEnterKey:false,
       showClass: {
-        popup: "swal2-noanimation",
-        backdrop: "swal2-noanimation",
+        popup: 'swal2-noanimation',
+        backdrop: 'swal2-noanimation'
       },
       hideClass: {
-        popup: "",
-        backdrop: "",
-      },
+        popup: '',
+        backdrop: ''
+      }
     }).then((result) => {
       console.log(result);
       if (result.isConfirmed) {
         // window.location.href = "https://www.google.com/";
-        window.location.href = "{{ base_url }}/renew";
+        window.location.href = '{{ base_url }}/renew';
       }
-      if (result.isDismissed) {
+      if(result.isDismissed){
         // window.location.href = "https://www.google.com/";
-        window.location.href = "{{ base_url }}/user/logout";
+        window.location.href = '{{ base_url }}/user/logout';
       }
-    });
+    })
+  }
+
+  if (package == "new-user") {
+    Swal.fire({
+      title: 'Subscribe Package!',
+      text: "Please Choose Your Package!",
+      icon: 'info',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Subscribe!',
+      cancelButtonText: 'Logout',
+      allowOutsideClick: false,
+      allowEscapeKey: false,
+      allowEnterKey:false,
+      showClass: {
+        popup: 'swal2-noanimation',
+        backdrop: 'swal2-noanimation'
+      },
+      hideClass: {
+        popup: '',
+        backdrop: ''
+      }
+    }).then((result) => {
+      console.log(result);
+      if (result.isConfirmed) {
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/renew';
+      }
+      if(result.isDismissed){
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/user/logout';
+      }
+    })
   }
 </script>
 <script src="{{url('<front>')}}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
