--- a/themes/FleetManagement/assets/front/css/frontdesign.css
+++ b/themes/FleetManagement/assets/front/css/frontdesign.css
@@ -1,3 +1,11 @@
+/* #footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+} */
+
 #footer .footer-newsletter form {
   padding-top: 50px;
 }
