--- a/themes/FleetManagement/templates/layout/page--user--%.html.twig
+++ b/themes/FleetManagement/templates/layout/page--user--%.html.twig
@@ -51,11 +51,11 @@
               </a>
               <div class="dropdown-menu lorvens-box-shadow notifications animated flipInY">
                 <div class="notification-heading row m-0">                
-                  <div class="text-left col-6">
+                  <div class="text-left col-6 pt-1">
                     <h5>Notifications</h5>
                   </div>
-                  <div class="text-right col-6">
-                    <a href="{{ base_url }}/notifications" class="dropdown-header text-primary font-weight-bold text-right m-auto">View More</a>
+                  <div class="text-right col-4">
+                    <a href="{{ base_url }}/notifications" class="dropdown-header text-light btn btn-success font-weight-bold text-right m-auto">View More</a>
                     {# <a href="{{ base_url }}/notifications" class="btn btn-primary h-50 rounded-5">View More</a> #}
                   </div>
                 </div>
