--- a/themes/FleetManagement/templates/layout/page--node--%.html.twig
+++ b/themes/FleetManagement/templates/layout/page--node--%.html.twig
@@ -15,18 +15,19 @@
     <!-- Sidebar -->
     <nav id="sidebar" class="lorvens-bg">
       <div class="sidebar-header">
-        {% if role == 'company' %} {% set home_url = base_url ~
-        '/company/dashboard' %} {% elseif role == 'data_entry' %} {% set home_url =
-        base_url ~ '/operator/dashboard' %} {% elseif role == 'administrator' %}
-        {% set home_url = base_url ~ '/admin/dashboard' %} {% endif %}
+        {% if role == 'company' %} 
+          {% set home_url = base_url ~ '/company/dashboard' %} 
+        {% elseif role == 'data_entry' %} 
+          {% set home_url = base_url ~ '/operator/dashboard' %} 
+        {% elseif role == 'administrator' %}
+          {% set home_url = base_url ~ '/admin/dashboard' %} 
+        {% endif %}
         <a href="{{ home_url }}"><h5 class="logo" alt="logo">DIGIFLEET</h5></a>
         <a href="{{ home_url }}"><h5 class="minimal-logo text-align" alt="logo"><strong>DF</strong></h5></a>
       </div>
       {% if expiry_status not in ['expired', 'new-user'] %}
       <ul class="list-unstyled components">
-        {{
-          page.header
-        }}
+        {{ page.header }}
       </ul>
       {% endif %}
     </nav>
@@ -50,11 +51,11 @@
               </a>
               <div class="dropdown-menu lorvens-box-shadow notifications animated flipInY">
                 <div class="notification-heading row m-0">                
-                  <div class="text-left col-6">
+                  <div class="text-left col-6 pt-1">
                     <h5>Notifications</h5>
                   </div>
-                  <div class="text-right col-6">
-                    <a href="{{ base_url }}/notifications" class="dropdown-header text-primary font-weight-bold text-right m-auto">View More</a>
+                  <div class="text-right col-4">
+                    <a href="{{ base_url }}/notifications" class="dropdown-header text-light btn btn-success font-weight-bold text-right m-auto">View More</a>
                     {# <a href="{{ base_url }}/notifications" class="btn btn-primary h-50 rounded-5">View More</a> #}
                   </div>
                 </div>
